# spring-boot-rest-generator

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  pom.xml  settings.gradle.kts
.github/workflows/: ci.yml
docs/: hud-theme.js  index.html  report.html
man/man1/: api-rest-generator.1  api-rest-generatorall.1  spring-boot-rest-generator.1  spring-boot-rest-generatorall.1
src/: config.rs  constants.rs  entity.rs  globals.rs  lib.rs  loco.rs  normalize.rs  parser.rs  templates.rs
src/main/java/com/jakobmenke/bootrestgenerator/: App.java  Column.java  ColumnToField.java  Configuration.java  Constants.java  Entity.java  EntityToRESTConstants.java  EntityToRESTResource.java  Main.java  Table.java  Templates.java  Util.java
src/main/java/com/jakobmenke/bootrestgenerator/dto/: ColumnToField.java  Entity.java
src/main/java/com/jakobmenke/bootrestgenerator/templates/: Templates.java
src/main/java/com/jakobmenke/bootrestgenerator/utils/: Configuration.java  EntityToRESTConstants.java  Globals.java  Util.java
src/main/kotlin/com/jakobmenke/bootrestgenerator/: Main.kt
src/main/kotlin/com/jakobmenke/bootrestgenerator/dto/: ColumnToField.kt  Entity.kt
src/main/kotlin/com/jakobmenke/bootrestgenerator/templates/: Templates.kt
src/main/kotlin/com/jakobmenke/bootrestgenerator/utils/: Configuration.kt  EntityToRESTConstants.kt  Globals.kt  Util.kt
src/main/resources/: config.properties  dump.sql  mssql_dump.sql  mysql_dump.sql  pg_dump.sql  sqlite_dump.sql
src/main/resources/templates/: constants.tmpl  dao.tmpl  entity.tmpl  genericdao.tmpl  repository.tmpl  rest.resource.tmpl  restrepository.tmpl
src/main/resources/templates/groovy/: constants.tmpl  dao.tmpl  entity.tmpl  genericdao.tmpl  repository.tmpl  rest.resource.tmpl
src/main/resources/templates/kotlin/: constants.tmpl  dao.tmpl  entity.tmpl  genericdao.tmpl  repository.tmpl  rest.resource.tmpl
src/test/java/com/jakobmenke/bootrestgenerator/: AppTest.java  ConfigurationTest.java  MainTest.java
src/test/kotlin/com/jakobmenke/bootrestgenerator/: ConfigurationTest.kt  MainTest.kt
src/test/kotlin/com/jakobmenke/bootrestgenerator/dto/: ColumnToFieldTest.kt  EntityTest.kt
src/test/kotlin/com/jakobmenke/bootrestgenerator/integration/: CrossDatabaseLanguageTest.kt  CustomSqlParsingTest.kt  EmptyEntityListTest.kt  FullPipelineTest.kt  GroovyContentValidationTest.kt  GroovyPipelineTest.kt  KotlinContentValidationTest.kt  KotlinPipelineTest.kt  MssqlPipelineTest.kt  PostgresqlPipelineTest.kt  SqlitePipelineTest.kt
tests/: loco_collision_pins.rs  loco_edge_cases.rs  loco_keyword_escape.rs  loco_smoke.rs  normalize_units.rs  parity_smoke.rs  sample_ddls.rs
(+14 files in other folders)
