[package]
name = "spring-boot-rest-generator"
version = "0.2.0"
edition = "2021"
authors = ["MenkeTechnologies"]
license = "MIT"
description = "Spring Boot REST API generator from raw SQL DDL dumps (Java/Kotlin/Groovy). Rust port of the original Kotlin generator."
repository = "https://github.com/MenkeTechnologies/spring-boot-rest-generator"
homepage = "https://github.com/MenkeTechnologies/spring-boot-rest-generator"
keywords = ["spring-boot", "codegen", "rest-api", "java", "kotlin"]
categories = ["development-tools::build-utils", "command-line-utilities"]
default-run = "spring-boot-rest-generator"

[[bin]]
name = "spring-boot-rest-generator"
path = "src/bin/main.rs"

[lib]
name = "spring_boot_rest_generator"
path = "src/lib.rs"

[dependencies]
regex = "1"
once_cell = "1"
java-properties = "2"

[dev-dependencies]
tempfile = "3"
